--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,12 +46,14 @@
       <section>
 
       <h1 id="farlert">Robust Alerts & Dialogs</h1>
-<p>Fast-Asynchronous-Responsive Alert
+<p>Never have to worry about styling and scripting a dialog every again.
 <br /><br />
-<img src="https://raw.githubusercontent.com/ryanwans/FARlert/master/exampleAlert.png" alt="example of alert" /></p>
+  <buttton onclick="Alert.hoist()">Hoist a Test Alert</button></p>
 
-<h3 id="create-an-alert">Create an alert</h3>
-<p><code class="language-plaintext highlighter-rouge">var Alert = new FAR.popup({options...});</code>
+<h2 id="header-2">Why choose FARlert?</h3>
+<p>
+  FARlert simplifies the process of creating and displaying dialogs for your website, while also allowing for maximum customization.
+  The alerts mimic that of Windows 10 dialogs, to give a professional and clean look to them. 
 <br /></p>
 <h3 id="hoist-an-alert">Hoist an alert</h3>
 <p><code class="language-plaintext highlighter-rouge">Alert.hoist();</code>
