--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,15 +48,15 @@
       <h1 id="farlert">Robust Alerts & Dialogs</h1>
 <p>Never have to worry about styling and scripting a dialog every again.
 <br /><br />
-  <buttton onclick="Alert.hoist()">Hoist a Test Alert</button></p>
+  <buttton class="ryan-button" onclick="Alert.hoist()">Hoist a Test Alert</button></p>
 
 <h2 id="header-2">Why choose FARlert?</h3>
 <p>
   FARlert simplifies the process of creating and displaying dialogs for your website, while also allowing for maximum customization.
   The alerts mimic that of Windows 10 dialogs, to give a professional and clean look to them. 
 <br /></p>
-<h3 id="hoist-an-alert">Hoist an alert</h3>
-<p><code class="language-plaintext highlighter-rouge">Alert.hoist();</code>
+<h3 id="header-3">Embed the CSS CDN</h3>
+<p><code class="language-html highlighter-rouge"><script src="https://gist.github.com/ryanrocket/d8f789a48f0106737f703482320aa5fa.js"></script></code>
 <br /></p>
 <h3 id="retract-an-alert">Retract an alert</h3>
 <p><code class="language-plaintext highlighter-rouge">Alert.retract();</code>
