--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
   The alerts mimic that of Windows 10 dialogs, to give a professional and clean look to them. 
 <br /></p>
 <h3 id="header-3">Embed the CSS CDN</h3>
-<p><code class="language-html highlighter-rouge"><script src="https://gist.github.com/ryanrocket/d8f789a48f0106737f703482320aa5fa.js"></script></code>
+<p><code class="language-html highlighter-rouge">&lt;script src="https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.min.js"&gt;</script></code>
 <br /></p>
 <h3 id="retract-an-alert">Retract an alert</h3>
 <p><code class="language-plaintext highlighter-rouge">Alert.retract();</code>
