--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,10 +66,12 @@
 <br>
 <p>
   <code class="language-js highlighter-rogue">
-    var options = {
-      ...
-    };
-    var SecurityAlert = new FAR.popup(options);
+    <div class="highlight>
+      var options = {
+        ...
+      };
+      var SecurityAlert = new FAR.popup(options);
+    </div>
   </code>
   <br></p>
 <h3 id="example-of-buttons">Example of Buttons</h3>
