--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,14 +65,10 @@
 <h2 id="header-2">Creating an Alert</h2>
 <br>
 <p>
-  <code class="language-js highlighter-rogue">
-    <div class="highlight>
-      var options = {
-        ...
-      };
-      var SecurityAlert = new FAR.popup(options);
-    </div>
-  </code>
+  <div class="language-js highlighter-rouge">
+    var options = {...};
+    var SecurityAlert = new FAR.popup(options);
+  </div>
   <br></p>
 <h3 id="example-of-buttons">Example of Buttons</h3>
 <p><code class="language-plaintext highlighter-rouge">[{name: 'Ignore', func: 'doThis()'}, {name: 'Browse...', func: 'doThat()'}]</code></p>
