--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,8 +66,14 @@
 <br>
 <p>
   <div class="language-js highlighter-rouge">
-    var options = {...};
-    var SecurityAlert = new FAR.popup(options);
+    <div class="highlight">
+      <pre class="highlight>
+        <code>          
+          var options = {...};
+          var SecurityAlert = new FAR.popup(options);
+                  </code>
+                  </pre>
+                  </div>
   </div>
   <br></p>
 <h3 id="example-of-buttons">Example of Buttons</h3>
