--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,13 +67,13 @@
 <p>
   <div class="language-js highlighter-rouge">
     <div class="highlight">
-      <pre class="highlight>
+      <pre class="highlight">
         <code>          
           var options = {...};
           var SecurityAlert = new FAR.popup(options);
-                  </code>
-                  </pre>
-                  </div>
+        </code>
+      </pre>
+    </div>
   </div>
   <br></p>
 <h3 id="example-of-buttons">Example of Buttons</h3>
