--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,16 +68,24 @@
   <div class="language-js highlighter-rouge">
     <div class="highlight">
       <pre class="highlight">
-        <code>          
-          var options = {...};
-          var SecurityAlert = new FAR.popup(options);
+        <code>var options = {...};<br>var SecurityAlert = new FAR.popup(options);
         </code>
       </pre>
     </div>
   </div>
   <br></p>
-<h3 id="example-of-buttons">Example of Buttons</h3>
-<p><code class="language-plaintext highlighter-rouge">[{name: 'Ignore', func: 'doThis()'}, {name: 'Browse...', func: 'doThat()'}]</code></p>
+<h2 id="header-2">Hoisting an Alert</h2>
+<br>
+<p>
+  <div class="language-js highlighter-rouge">
+    <div class="highlight">
+      <pre class="highlight">
+        <code>// Hoist (show) Alert <br>SecurityAlert.hoist();<br>// Retract (hide) Alert<br>SecurityAlert.retract();
+        </code>
+      </pre>
+    </div>
+  </div>
+  <br></p>
 
 
       </section>
