--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,26 +66,50 @@
 <br>
 <p>
   <div class="language-js highlighter-rouge">
-    <div class="highlight">
-      <pre class="highlight">
         <code>var options = {...};<br>var SecurityAlert = new FAR.popup(options);
         </code>
-      </pre>
-    </div>
   </div>
   <br></p>
 <h2 id="header-2">Hoisting an Alert</h2>
 <br>
 <p>
   <div class="language-js highlighter-rouge">
-    <div class="highlight">
-      <pre class="highlight">
         <code>// Hoist (show) Alert <br>SecurityAlert.hoist();<br>// Retract (hide) Alert<br>SecurityAlert.retract();
         </code>
-      </pre>
-    </div>
   </div>
   <br></p>
+<h2 id="header-2">Valid Alert Options</h2>
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">Name</th>
+      <th style="text-align: left">Description</th>
+      <th style="text-align: left">Default</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">borderFlash</td>
+      <td style="text-align: left">Flash border upon hoisting</td>
+      <td style="text-align: left">false</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">moveable</td>
+      <td style="text-align: left">Move around the dialog box</td>
+      <td style="text-align: left">true</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">ding</td>
+      <td style="text-align: left">Play sound upon hoisting</td>
+      <td style="text-align: left">false</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">title</td>
+      <td style="text-align: left">The title at top of the alert box</td>
+      <td style="text-align: left">'Alert'</td>
+    </tr>
+  </tbody>
+</table>
 
 
       </section>
