--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,7 @@
 </table><br>
 <h2 id="header-2">Defining Alert Buttons</h2>
 When defining buttons in the Options object, it should be an Array of Object, containing the 'name' and 'func' of that button:
-<br>
+<br><br><b>
 var options = {<br>
 &emsp;. . .<br>
 &emsp;buttons: [<br>
@@ -140,10 +140,12 @@ var options = {<br>
 &emsp;&emsp;}<br>
 &emsp;]<br>
 };
+  </b>
       </section>
       <footer>
         
-        <p>This project is maintained by <a href="https://github.com/ryanwans">ryanwans</a></p>
+        <p>This project is maintained by <a href="https://github.com/ryanwans">ryanwans</a><br>
+          <a href="https://ryanwans.com?ref=farlert">Visit Ryan Wans Development</a></p>
         
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
@@ -151,4 +153,14 @@ var options = {<br>
     <script src="/FARlert/assets/js/scale.fix.js"></script>
     
   </body>
+  <style>
+    .ryan-buttton {
+      display:block;
+      padding: 8px;
+      border: #005200 1px solid;
+      border-radius: 8px
+      background-color: #006d00;
+      color: white;
+    }
+  </style>
 </html>
