--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,15 @@
 <meta name="generator" content="Jekyll v3.9.0" />
 <meta property="og:title" content="FARlert" />
 <meta property="og:locale" content="en_US" />
+    
 <meta name="description" content="A responsive, professional, clean-looking dialog/alert system" />
 <meta property="og:description" content="A responsive, professional, clean-looking dialog/alert system" />
 <link rel="canonical" type="text/css" href="https://ryanwans.github.io/FARlert/" />
 <link rel="stylesheet" href="https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.style.css"/> 
+    <script src="https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.min.js"></script>
 <meta property="og:url" content="https://ryanwans.github.io/FARlert/" />
 <meta property="og:site_name" content="FARLert" />
 <script type="application/ld+json">
-<script src="https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.min.js"></script>
 {"@type":"WebSite","url":"https://ryanwans.github.io/FARlert/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://raw.githubusercontent.com/ryanwans/FARlert/master/logoNormal.png"}},"headline":"FARlert","description":"A responsive, professional, clean-looking dialog/alert system","name":"FARLert","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
@@ -50,7 +51,7 @@
       <h1 id="farlert">Robust Alerts & Dialogs</h1>
 <p>Never have to worry about styling and scripting a dialog every again.
 <br /><br />
-  <buttton class="ryan-button" onclick="Alert.hoist()">Hoist a Test Alert</button></p>
+  <buttton style="display:inline-block;padding:8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert.hoist()">Hoist a Test Alert</button></p>
 
 <h2 id="header-2">Why choose FARlert?</h3>
 <p>
