--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,9 +89,11 @@
       <h1 id="farlert">Robust Alerts & Dialogs</h1>
 <p>Never have to worry about styling and scripting a dialog every again.
 <br /><br />
-  <buttton style="float:left;margin-right:10px;cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert.hoist()">Hoist a Test Alert</button>
-<buttton style="float:left;margin-right:10px;cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert2.hoist()">Hoist Second Test</button>
-<buttton style="float:left;margin-right:10px;cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert3.hoist()">Hoist Third Test</button></p>
+  <buttton style="cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert.hoist()">Hoist a Test Alert</button>
+<br>
+  <buttton style="cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert2.hoist()">Hoist Second Test</button>
+<br>
+  <buttton style="cursor:pointer;display:inline-block;padding:4px 8px;border-radius:7px;border:#004e00 1px solid;background-color:#006d00;color:white;" onclick="Alert3.hoist()">Hoist Third Test</button></p>
 
 <h2 id="header-2">Why choose FARlert?</h3>
 <p>
