--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
           <img src="https://raw.githubusercontent.com/ryanwans/FARlert/master/logoNormal.png" alt="Logo" />
         
 
-        <p>A responsive, professional, clean-looking dialog/alert system</p>
+        <p>Used by <b>400+</b> websites and web apps!</p>
 
         
         <p class="view"><a href="https://github.com/ryanwans/FARlert">View the Project on GitHub <small>ryanwans/FARlert</small></a></p>
