--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,10 +101,10 @@
   The alerts mimic that of Windows 10 dialogs, to give a professional and clean look to them. 
 <br /></p>
 <h3 id="header-3">Embed the CSS CDN</h3>
-<p><code class="language-html highlighter-rouge">https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.style.css</script></code>
+<p><code class="language-html highlighter-rouge">https://ryanwans.com/global-cdn/v8/far/FARlert.style.css</code>
 <br /></p>
 <h3 id="header-3">Embed the JS CDN</h3>
-<p><code class="language-html highlighter-rouge">https://raw.githubusercontent.com/ryanwans/FARlert/master/FARlert.min.js</script></code>
+<p><code class="language-html highlighter-rouge">https://ryanwans.com/global-cdn/v8/far/FARlert.min.js</code>
 <br /></p>
 <h1 id="header-1">Documentation</h3>
 <h2 id="header-2">Creating an Alert</h2>
