--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -186,6 +186,9 @@ var options = {<br>
 &emsp;]<br>
 };
   </b>
+<h2 id="header-2">Manually Retracting Alerts</h2>
+If you ever need to close the current popup, but the variable for the popup is not in your scope; you can use <b>window.FAR.selfClose()</b> to close the current popup,
+no matter the variable. Note that if more than 1 popup are opened, this function will only be able to close 1 popup at a time.
       </section>
       <footer>
         
